fixed course navigation alignment

--- a/public/Kanbas/Courses/Navigation/index.css
+++ b/public/Kanbas/Courses/Navigation/index.css
@@ -5,6 +5,7 @@
     width: 125px;
     margin: 0px;
     margin-left: 5px;
+    margin-right: 10px;
   }
   .wd-navigation li {
     padding-left: 10px;
